# launch-tower

./: .gitignore  README.markdown  README.md  README.rst  System Power Draw.txt  test.txt
computer/: setup-LTC.markdown
doc/: Building_Debian_Linux_onto_Beagleboard.markdown  Installing_Debian_on_BeagleBoard.markdown  LTC_Diagnostic_Procedure.markdown  Launch_Tower_Computer_Setup.markdown  Launch_Tower_Instructions.markdown
doc/Phidgets/Programming/C/C Examples/: IR-simple.c  Makefile.am  Manager-simple.c  MotorControl-simple.c  configure
doc/Phidgets/Programming/C/VC++ Examples/source/: AdvancedServo-simple.c  Analog-simple.c  Bridge-simple.c  Makefile.in  PHSensor-simple.c  Servo-simple.c  Spatial-simple.c  config.h.in  configure.ac  version.sh
doc/powerpoint/: PSAS - Rocket Ready Schematic.ppt  PSAS_Launch_Tower_Upgrade-PRESENTATION.ppt  PSAS_Launch_Tower_Upgrade.ppt
eagle/: .LTC Whole System Schematic.sch.lck  LTC Connector Interface.brd  LTC Connector Interface.sch  LTC Whole System Schematic.sch  LTC2 Top-level Schematic.sch  Rocket_Ready.brd  Rocket_Ready.sch  launch-tower.lbr
eagle/Ignition Board/: .Launch_Tower_Ignition_Board_v6-4.brd.lck  Ignition_Board.brd  Ignition_Board.sch  Launch_Tower_Ignition_Board_v6-0.sch  Launch_Tower_Ignition_Board_v6-2.brd  Launch_Tower_Ignition_Board_v6-3.brd  Launch_Tower_Ignition_Board_v6-3.sch  Launch_Tower_Ignition_Board_v6-4.brd  Launch_Tower_Ignition_Board_v6-4.sch
eagle/Phidgets - CAD Files/: 1014_2.step  1124_0.step
eagle/Safety Schematic/: PSAS_Safety_System.sch
ltc3/: DESIGN_REVIEW_QUESTIONS.rst  README.md  README.rst  TODO.md  TODOS.rst
(+633 files in other folders)
