## Process this file with automake to produce Makefile.in

noinst_PROGRAMS = Accelerometer-simple \
AdvancedServo-simple \
Dictionary-simple \
Analog-simple \
Bridge-simple \
Encoder-simple \
FrequencyCounter-simple \
GPS-simple \
InterfaceKit-simple \
IR-simple \
LED-simple \
Manager-simple \
MotorControl-simple \
PHSensor-simple \
RFID-simple \
Servo-simple \
Spatial-simple \
Stepper-simple \
TemperatureSensor-simple \
TextLCD-simple

AM_LDFLAGS = $(EXTRA_LDFLAGS)
AM_CFLAGS = $(EXTRA_CFLAGS)
